tests/parser/should_fail/patFail003.hs
module PatFail003 where

f (case x of a -> b) = _
