tests/parser/should_fail/patFail003.stderr

patFail003.hs:3:4: error: [GHC-53786]
    (case ... of ...)-syntax in pattern
